<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_healthy_living">健康生活</string>
    <string name="title_activity_main">即时心率</string>
    <string name="save">保存</string>
    <string name="cancel">退出</string>
    <string name="help_introduce">测试时，只需将自己的一个手指头按在打开的闪光灯上，按压力度适中。保持十秒钟以上，以使测试的心率数据稳定下来。</string>
    <string name="start_using">开始测试</string>
    <string name="welcome_to">欢迎进入心率测试</string>
    <string name="heart_history">心率历史记录</string>
    <string name="help_info">提示:这是一个需要硬件支持的高级版本。如果你无法使用此软件，可以到安卓市场下载通用版本。</string>
    <string name="led_introduce">如果你的手机没有闪光灯，你可以去光线比较好的地方测试！</string>
    <string name="help_introduce_use">点击分享，你可以通过Facebook、sms等将自己的即时心率分享给自己的亲友！</string>
    <string name="measure">测量</string>
    <string name="share_to">分享</string>
    <string name="history">记录</string>
    <string name="store">保存</string>
    <string name="menu_settings">设置</string>
        <string name="title_activity_start">色盲测试</string>
    <string name="about_color_blindness">关于色盲</string>
    <string name="about_color_blindness_msg" formatted="false">色盲也称色觉辨认障碍是一种无法正确辨识部分或全部颜色的缺陷。通常色盲发生的原因与遗传有关，但有些色盲也与视神经和脑的病变有关，或由于接触某些化学物质所致。色盲占全球人数约8%，男性的发生率远高于女性，男性有8%，女性约0.5%，大部分的色盲为部分色盲，只有极少数的色盲为全色盲。轻度的色觉异常则称为色弱，与色盲相比程度较轻。</string>
    <string name="label_ok">了解了</string>
    <string name="about_this_software">关于该软件</string>
    <string name="about_this_software_msg">你想知道自己是不是色盲吗？可能你需要试试这个简单易用的程序来测试一下，如果有很多图片你无法轻松分辨，你可能是某些颜色的色盲。
PS：此软件测试结果并不代表权威，要想知道自己的详细状况请去医院做个详细检查，健康要紧哪亲~</string>
    <string name="start">开始</string>
    <string name="guide1">该软件是用来测试色觉的,</string>
    <string name="guide2">请您在5秒钟内选择您所看到的正确答案~</string>
    <string name="test">欢迎进入测试界面~</string>
    <string name="other">其他答案</string>
    <string name="unknown">看不清</string>
    <string name="five">5</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="two">2</string>
    <string name="two_six">26</string>
    <string name="two_nine">29</string>
    <string name="seven_zero">70</string>
    <string name="six_six">66</string>
    <string name="six_eight_nine">689</string>
    <string name="eight_zero_six">806</string>
    <string name="cattle">牛</string>
    <string name="deer">鹿</string>
    <string name="next">下一张</string>
    <string name="error">错误提示</string>
    <string name="invalid_answer">请选择您所看到的答案之后再点击下一张</string>
    <string name="testResult">测试的正确率为：</string>
    <string name="first">恭喜您，您眼睛分辨色彩较准确~</string>
    <string name="second">很遗憾，您眼睛分辨色彩稍微有些差错。可能是失误所致，也可能是别的原因，您可再测一次，或者去咨询医生~</string>
    <string name="third">很遗憾，您眼睛分辨色彩有些不准确。具体情况建议咨询医生~</string>
    <string name="four">很遗憾，您眼睛分辨色彩有些问题，具体情况建议咨询医生~</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="notification_text">请不要将手机平放</string>
    <string name="left_score_text">左眼视力为:</string>
    <string name="right_score_text">右眼视力为:</string>
    <string name="title_score_text">测试结果</string>
    <string name="share_text">分享</string>
    <string name="retest_text">重新测试</string>
    <string name="remind_text">选择时请转动手机保持E开口方向始终朝向右方</string>
    <string name="title_ready_text">测试教学</string>
    <string name="back_text">返回</string>
    <string name="test_right_text">测试右眼</string>
    <string name="test_left_text">测试左眼</string>
    <string name="eyssightappname">视力测试</string>
    <string name="colorappname">色盲测试</string>
    <string name="heartappname">心率测试</string>
    <string name="bikeappname">单车骑行</string>
    <string name="stepappname">步行运动</string>
    <string name="shareResult">通过该测试软件测试，您的色觉正确率为：<xliff:g id="name">%1$s</xliff:g></string>
    <string name="help_text">帮助</string>
    <string name="start_text">开始</string>
    <string name="title_help_text">使用说明</string>
    <string name="title_method_text">测试方法:</string>
    <string name="title_time_text">测试时间:</string>
    <string name="title_remind_text">测试需知:</string>
    <string name="test_method_text">（1）使用时将手机竖直放置于离眼 40cm 或 16in 的位置\n（2）开始测试时保持手机平衡，不要随便晃动手机\n（3）选择时观察屏幕上出现的 E 字母开口方向，利用重力感应保持 E 开口方向始终朝向右方\n（4）如果选择正确则继续下一个错误则测试结束，分左右眼测试</string>
    <string name="test_time_text">测试时间大约为2至3分钟</string>
    <string name="test_remind_text">该软件测试结果有一定的误差，仅供参考。\n\t\t谢谢您的使用，祝您使用愉快！</string>
    <string name="loading_text">等待加载</string>
    <string name="share_score">分享分数</string>
    <string name=" no_data_to_share">没有获得即时心率，不能进行分享。</string>
    <string name="score_level_0_txt">小数视力小于：0.1   五分视力小于：4.0</string>
    <string name="score_level_1_txt">小数视力为：0.1   五分视力为：4.0</string>
    <string name="score_level_2_txt">小数视力为：0.12   五分视力为：4.1</string>
    <string name="score_level_3_txt">小数视力为：0.15   五分视力为：4.2</string>
    <string name="score_level_4_txt">小数视力为：0.2   五分视力为：4.3</string>
    <string name="score_level_5_txt">小数视力为：0.25   五分视力为：4.4</string>
    <string name="score_level_6_txt">小数视力为：0.3   五分视力为：4.5</string>
    <string name="score_level_7_txt">小数视力为：0.4   五分视力为：4.6</string>
    <string name="score_level_8_txt">小数视力为：0.5   五分视力为：4.7</string>
    <string name="score_level_9_txt">小数视力为：0.6   五分视力为：4.8</string>
    <string name="score_level_10_txt">小数视力为：0.8   五分视力为：4.9</string>
    <string name="score_level_11_txt">小数视力为：1.0   五分视力为：5.0</string>
    <string name="score_level_12_txt">小数视力为：1.2   五分视力为：5.1</string>
    <string name="score_level_13_txt">小数视力为：1.5   五分视力为：5.2</string>
    <string name="suggest_donot_to_test">您的设备没有闪光灯，不能进行心率测试，请返回主界面。</string>
    <string name="check_FlashLight">检测是否有闪光灯。</string>
    <string name="menu_about">关于</string>
    <string name="menu_close">关闭</string>
    <string name="pedometer_step_count">步数</string>
    <string name="pedometer_step_title">步</string>
    <string name="pedometer_distance_title">里程</string>
    <string name="pedometer_distance">公里</string>
    <string name="pedometer_calorie_title">消耗</string>
    <string name="pedometer_calorie">卡路里</string>
    <string name="pedometer_speed_title">速度</string>
    <string name="pedometer_speed">公里/小时</string>
    <string name="pedometer_sport_mode_title">设置运动方式</string>
    <string name="pedometer_sport_mode">运动方式(散步/跑步)</string>
    <string name="pedometer_sport_mode_run">跑步</string>
    <string name="pedometer_sport_mode_walk">散步</string>
    <string name="pedometer_reset">重置</string>
    <string name="pedometer_start">开始</string>
    <string name="pedometer_stop">停止</string>
    <string name="pedometer_save">保存</string>
    <string name="pedometer_step_width">设置步长（散步/跑步）</string>
    <string name="pedometer_OK">确定</string>
    <string name="pedometer_Cancel">取消</string>
    <string name="pedometer_setting_step_width">步长</string>
    <string name="pedometer_setting_step_width_sub">每一步的长度，用来计算距离，速度和卡路里消耗。</string>
    <string name="pedometer_setting_weight">体重</string>
    <string name="pedometer_setting_weight_sub">计算消耗的卡路里。</string>
    <string name="pedometer_setting_sprot_mode_sub">消耗卡路里的方式。</string>
    <string name="pedometer_setting_light_alway_on">保持屏幕常亮</string>
    <string name="pedometer_setting_light_alway_on_sub">某些手机只有在屏幕唤醒的时候才能计步，请选择合适您手机的运行方式。</string>
    <string name="pedometer_run_in_background">后台运行(手机休眠时仍然运行)</string>
    <string name="pedometer_keep_screen_on">保持唤醒(不让手机休眠)</string>
    <string name="pedometer_share_info">用“健康生活”应用记录运动数据，感觉很好！</string>
    <string name="pedometer_name">计步器</string>
    <string name="pedometer_default_value">0</string>
    <string name="pedometer_default_runned_time">00:00:00</string>
    <string name="pedometer_delete_all_history">删除全部</string>
    <string name="pedometer_history_title">历史记录</string>
    <string name="pedometer_history_start_time">开始</string>
    <string name="pedometer_history_end_time">结束</string>
    <string name="pedometer_history_distance">距离</string>
    <string name="pedometer_history_delete">删除</string>
    <string name="pedometer_data_info_title">时间信息</string>
    <string name="pedometer_about_title">关于</string>
    <string name="pedometer_about_info">基于G-Sensor的计步器软件是针对个人用户开发的，通过此软件你可以清楚的知道自己的运动量，消耗的卡路里量。只要开启软件选择好运动方式（步行or跑步）后，将手机放入裤子口袋中，就可以开始运动，运动结束后，通过软件的信息显示窗口可以看到此次运动的步数、距离、时间、速度已经消耗的卡路里，并且这些数据会被保存到数据库中，方便用户查询一段时间内的运动情况。</string>
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d:%02d</xliff:g></string>
    <string name="date_format" translatable="false"><xliff:g id="format">%02d/%02d/%02d</xliff:g></string>
    <string name="runned_date_format" translatable="false"><xliff:g id="format">%02d.%02d</xliff:g></string>
    <string name="pedometer_history_empty">没有记录!</string>
    <string name="share_data" xliff:restype="x-GENERIC/CONTACTPICKER/RECIPIENTBAR">您的心率测试值为: <xliff:g id="data">%d</xliff:g></string>
     <string name="store_heart_rate">保存心率测试结果</string>
     <string name="my_heart_rate">我的心率</string>
     <string name="no_data_to_store">没有获得即时心率，不能进行存储。</string>
    <string name="bycrid_main_title">單車騎行</string>
    <string name="bycrid_start_riding">開始</string>
    <string name="bycrid_history">歷史</string>
    <string name="bycrid_back">返回</string>
    <string name="bycrid_title_confirm">請確認</string>
    <string name="bycrid_open_gps_data_confirm">將開啟GPS和數據連接？</string>
    <string name="bycrid_ok">確認</string>
    <string name="bycrid_cancel">取消</string>
    <string name="bycrid_item_distance">里程:</string>
    <string name="bycrid_item_duration">時間:</string>
    <string name="bycrid_item_velocity">速度:</string>
    <string name="bycrid_item_altitude">高度:</string>
    <string name="bycrid_item_average_speed">平均速度</string>
    <string name="bycrid_finish">結束</string>
    <string name="bycrid_capture">拍照</string>
    <string name="bycrid_zoomout">放大</string>
    <string name="bycrid_options">選項</string>
    <string name="bycrid_save_when_finish_confirm">是否保存此次騎行紀錄?</string>
    <string name="bycrid_yes">是</string>
    <string name="bycrid_no">否</string>
    <string name="bycrid_delete">刪除</string>
    <string name="bycrid_delete_record_confirm">是否刪除這筆騎行紀錄?</string>
    <string name="bycrid_hstr_item_distance">距離</string>
    <string name="bycrid_hstr_item_duration">時間</string>
    <string name="bycrid_hstr_item_avg_speed">速度</string>
    <string name="bycrid_km">千米</string>
    <string name="bycrid_km_per_hour">千米/時</string>
    <string name="bycrid_m">米</string>
    <string name="bycrid_ridng_title">單車騎行</string>
    <string name="bycrid_ride_record">騎行記錄</string>
     <string name="put_finger_onCamera">你没有把手指放在摄像头上.</string>
     <string name="app_id">564ea6ef</string>
      <string name="demo_introduction">注意：\n\t用户名不能为空,不支持中文字符,不能包含空格,6至18个字母、数字或下划线的组合，以字母开头。</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World, HelloWorldActivity!</string>
    <string name="app_name">智慧校园</string>
     <string name="yuyin">语音登录</string>
    <string name="zhanghao">账号登录</string>
    <string name="hint1">请输入手机号码</string>
    <string name="hint2">请输入密码</string>
    <string name="login">登录</string>
    <string name="exit">返回</string>
    <string-array name="yuanxiItems">
        <item>通信工程学院</item>
        <item>能源与动力工程学院</item>
        <item>人文与社会科学学院</item>
        <item>外国语学院</item>
        <item>康尼学院</item>
        <item>建筑工程学院</item>
        <item>机械工程学院</item>
        <item>材料工程学院</item>
        <item>自动化学院</item>
        <item>艺术与设计学院</item>
        <item>计算机工程学院</item>
        <item>汽车与轨道交通学院</item>
        <item>创新学院</item>
        <item>电力工程学院</item>
        <item>经济管理学院</item>
        <item>环境工程学院</item>
        <item>研究生院</item>
        <item>工业中心</item>
        <item>其它院系</item>
    </string-array>
    <string name="inf1">请输入账号和密码，完成注册</string>
    <string name="inf2">请确认教育信息</string>
    <string name="title3">注册信息填写</string>
    <string name="mobilephone">手机号</string>
	<string name="jieshu">借书</string>
	<string name="huanshu">还书</string>
	<string name="chaxun">查询</string>
</resources>