<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"/>
    
     <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"/>
     
      <item
        android:id="@+id/menu_close"
        android:orderInCategory="100"
        android:title="@string/menu_close"/>
      
      <item 
          android:id="@+id/menu_share"
          android:orderInCategory="2"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_menu_share"
          android:title="@string/share"/>
      
      <item
          android:id="@+id/menu_history"
          android:orderInCategory="1"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_menu_history"
          android:title="@string/history"/>

</menu>