<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="3dp"
    android:orientation="horizontal">
    <LinearLayout
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="6dp"
      android:orientation="vertical">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/welcome_to"/> 
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="13dp"
        android:text="@string/help_introduce"/> 
   </LinearLayout> 
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/help_guide"/>
</LinearLayout>
  <TextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="15dp"
       android:textSize="13dp"
       android:text="@string/help_info"/> 
  <TextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="12dp"
       android:textSize="13dp"
       android:text="@string/led_introduce"/> 
  <TextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="15dp"
       android:textSize="13dp"
       android:text="@string/help_introduce_use"/> 
</LinearLayout>