<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">  
     
     <Button 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/history_delete_all"
         android:background="@drawable/pedometer_delete_button"
         android:text="@string/pedometer_delete_all_history"
         android:textColor="@color/text_color"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/pedometer_history_delete_margin_bottom"
         android:visibility="gone"/>
     
     <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/pedometer_history_title_height"
        android:background="@drawable/pedometer_action_bar"
        android:id="@+id/history_title"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pedometer_history_title_text_size"
        android:text="@string/pedometer_history_title"/>
     <!-- 2013/02/26-34259-HenryPeng,[AAP1302][Bug-318]Walking exercise-Prompt "Unfortunately, the process com.arima.healthyliving has stopped" -->
     <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:id="@+id/history_item"
	    android:layout_marginLeft="@dimen/pedometer_history_item_margin_left"
	    android:layout_marginRight="@dimen/pedometer_history_item_margin_right"
        android:layout_below="@id/history_title">  
	    <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:layout_marginBottom="@dimen/pedometer_history_item_margin_bottom"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_history_start_time"
	        android:textSize="@dimen/pedometer_history_item_text_size"/>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:text="@string/pedometer_history_end_time"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:textSize="@dimen/pedometer_history_item_text_size"/> 
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_step_count"
	        android:textSize="@dimen/pedometer_history_item_text_size"/> 
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_speed_title"
	        android:textSize="@dimen/pedometer_history_item_text_size"/> 
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_history_distance"
	        android:textSize="@dimen/pedometer_history_item_text_size"/> 
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_calorie_title"
	        android:textSize="@dimen/pedometer_history_item_text_size"/>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="@dimen/pedometer_history_item_margin_top"
	        android:gravity="center"
	        android:textColor="@color/pedometer_histor_item_text_color"
	        android:text="@string/pedometer_history_delete"
	        android:textSize="@dimen/pedometer_history_item_text_size"/>
	</LinearLayout>
	
     <ListView
         android:id="@+id/pedometer_history_list"
         android:layout_below="@id/history_item"
         android:layout_above="@id/history_delete_all"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:divider="@drawable/reject_with_message_divider"
         android:dividerHeight="1dp"
         android:focusable="false"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="false"
         android:scrollbarStyle="outsideInset"
         android:clickable="false">
     </ListView>
     
     <TextView 
         android:id="@android:id/empty"
         android:layout_below="@id/history_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/pedometer_history_empty"
         android:textColor="?android:attr/textColorSecondary"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:visibility="gone"/>
	<!-- 2013/02/26-34259-HenryPeng -->
</RelativeLayout>